--- a/Naive_Bayes/PracticeWorksheet1.ipynb
+++ b/Naive_Bayes/PracticeWorksheet1.ipynb
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1252,8 @@
     "    return accuracy_score(ground_truth,predictions,sample_weight= \\\n",
     "                          compute_sample_weight(class_weight='balanced', y=ground_truth, indices=None))\n",
     "    # since this custom function would be called by make_scorer and we already gave sample_weights in fit_param of\n",
-    "    # \n",
+    "    # cross_validation, hence we could omit this sample_weight from here, it will consider this after omitting\n",
+    "    # also.\n",
     "\n",
     "# func will negate the return value of my_custom_func, if greater_is_better = False\n",
     "loss = make_scorer(my_custom_func, greater_is_better=False,needs_proba=False,needs_threshold=False)\n",
@@ -1261,10 +1262,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 252,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fit_time': array([0.00611806, 0.00047398, 0.00049591]), 'score_time': array([0.00118399, 0.00034094, 0.00029993]), 'test_accuracy': array([0.5       , 0.66666667, 0.5       ])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for alpha_i in [2.2]: # you_can_give_lot_of_values_of_alpha\n",
+    "    \n",
+    "    naive_clf = BernoulliNB(alpha=1, binarize=None, class_prior=None, fit_prior=True)\n",
+    "    \n",
+    "    weight_vector_y_1 = compute_sample_weight(class_weight='balanced', y=y_1, indices=None)\n",
+    "    \n",
+    "    dict_of_scores = cross_validate(naive_clf,X_1,y_1,scoring={'accuracy': score} \\\n",
+    "                        ,cv=3,fit_params= {'sample_weight': weight_vector_y_1},return_train_score=False)\n",
+    "    # could have used loss if I wanted that \n",
+    "                                                               \n",
+    "    # I set return_train_score as False, since I did not want train_score for any of the scoring metric defined.\n",
+    "    \n",
+    "    # here in cross_validate, we have multiple options in case of scoring and cv\n",
+    "    \n",
+    "    # If you want loss then make greater_is_better = False, so it would just invert the sign of score(profit) to \n",
+    "    # make it a loss\n",
+    "    \n",
+    "    print(dict_of_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fit_time</th>\n",
+       "      <th>score_time</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.006118</td>\n",
+       "      <td>0.001184</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000474</td>\n",
+       "      <td>0.000341</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000496</td>\n",
+       "      <td>0.000300</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fit_time  score_time  test_accuracy\n",
+       "0  0.006118    0.001184       0.500000\n",
+       "1  0.000474    0.000341       0.666667\n",
+       "2  0.000496    0.000300       0.500000"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I will get this type of dictionary for each fold\n",
+    "pd.DataFrame(dict_of_scores)\n",
+    "# So for every value of hyperparameter, I will get k(equal to folds) values of each of the scores' string mentioned \n",
+    "# as a parameter of scoring in the form of dictionary."
+   ]
   },
   {
    "cell_type": "code",
