--- a/Naive_Bayes/PracticeWorksheet1.ipynb
+++ b/Naive_Bayes/PracticeWorksheet1.ipynb
@@ -826,6 +826,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read this documentation very carefully : http://scikit-learn.org/stable/modules/model_evaluation.html#using-multiple-metric-evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 220,
    "metadata": {},
@@ -922,6 +929,8 @@
     "    \n",
     "    dict_of_scores = cross_validate(naive_clf,X_1,y_1,scoring={'accuracy','precision','recall','f1'}\n",
     "                        ,cv=3,fit_params= {'sample_weight': weight_vector_y_1},return_train_score=True)\n",
+    "    # in scoring parameter we could have also given: ['accuracy','precision','recall','f1'] --> for this, read the doc\n",
+    "    \n",
     "    # here in cross_validate, we have multiple options in case of scoring and cv\n",
     "    \n",
     "    print(dict_of_scores)"
@@ -1113,7 +1122,9 @@
     "                        'f1': make_scorer(f1_score,greater_is_better=True)}\n",
     "                        ,cv=TimeSeriesSplit(n_splits=3).split(X_1), \\\n",
     "                         fit_params= {'sample_weight': weight_vector_y_1},return_train_score=True)\n",
+    "    \n",
     "    # here in cross_validate, we have multiple options in case of scoring and cv\n",
+    "    \n",
     "    # If you want loss then make greater_is_better = False, so it would just invert the sign of score(profit) to \n",
     "    # make it a loss\n",
     "    \n",
@@ -1372,7 +1383,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "Note : \n",
+    "\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
