Keras With Tensorflow Backend

--- a/DeepLearning_Tensorflow/Practice_Keras.ipynb
+++ b/DeepLearning_Tensorflow/Practice_Keras.ipynb
@@ -3347,7 +3347,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# For further sections proceed with the actual notebook"
+   ]
   }
  ],
  "metadata": {
